# CS100-2025-Spring-Recitations

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md
r01/basics/: source_01.c
r01/outline/: recitation_overview_01.typ
r01/supp/: main.c  main_naive.c
r02/basics/: source_02.c  source_03.c  source_04.c
r03/basics/: include_04.h  source_04.c
r03/outline/: recitation_overview_03.typ
r03/supp/: main.c
r04/basics/: Gomoku.c  source_01.c  source_03.c
r05/basics/: source_03.c  source_04.c
r06/basics/: source_01.c  source_02.c  source_06.c
r07/basics/: auto_01.cpp  auto_02.cpp  namespace_02.h  ownership_01.cpp  raii_01.cpp  raii_02.cpp  reference_01.cpp  reference_02.cpp  reference_04.cpp  reference_05.cpp
r07/supp/: main.cpp
r08/basics/: constexpr_01.cpp  pass_by_view_01.cpp  pass_by_view_02.cpp  raii_crisis_03.cpp  reference_01.cpp  reference_07.cpp  reference_08.cpp  template_01.cpp
r09/basics/: class_design_03.cpp  dynarray_01.hpp  rvalue_reference_01.cpp
r09/learn_cmake/: CMakeLists.txt  build.py
r09/supp/: property_01.cpp  property_05.cpp  property_06.cpp
r1/: go.py  main.c  show.py
r1/basics/: source_00.c  source_01.c  source_02.c  source_03.c  source_04.c
r1/doc/: README.typ
r1/outline/: recitation_overview_01.typ
r1/supp/: main.c  main_naive.c
r10/basics/: iterators_01.cpp  iterators_02.cpp  iterators_03.cpp  lambda_01.cpp  lambda_02.cpp  lambda_03.cpp  lambda_04.cpp  overloading_01.cpp  smart_pointers_01.cpp  smart_pointers_02.cpp  smart_pointers_03.cpp  smart_pointers_04.cpp  smart_pointers_05.cpp  smart_pointers_06.cpp  smart_pointers_07.cpp  sort_01.cpp  sort_02.cpp  stdfind_01.cpp  stdfind_02.cpp  stdsort_01.cpp  stdsort_02.cpp  vec.h  vec_01.cpp  vec_02.cpp  vec_03.cpp  vec_04.cpp
r10/outline/: recitation_overview_10.typ
r11/basics/: derive_01.cpp  derive_02.cpp  derive_03.cpp  derive_04.cpp  virtual_01.cpp  virtual_02.cpp  virtual_03.cpp  virtual_04.cpp  virtual_05.cpp  virtual_06.cpp  virtual_07.cpp  virtual_08.cpp  virtual_09.cpp  virtual_10.cpp
r11/outline/: recitation_overview_11.typ
r13/outline/: recitation_overview_13.typ
r13/template/: 01_motivation.cpp  02_basics.cpp  03_exercise.cpp  04_specialization.cpp  05_trait.cpp  06_trait.cpp  07_exercise.cpp  08_magic.cpp  09_magic.cpp  10_magic.cpp  12_preview.cpp
r14/: CMakeLists.txt  main.cpp
r2/basics/: learn_git.typ  source_01.c  source_02.c  source_03.c  source_04.c
r2/outline/: recitation_overview_01.typ
r2/supp/: go.py  main.c
r3/basics/: include_03.h  source_01.c  source_02.c  source_03.c  source_04.c  source_05.c
r3/supp/: main.c
r4/basics/: Gomoku.c  source_03.c  source_05.c  source_06.c  source_07.c  test.c
r4/outline/: recitation_overview_04.typ
r4/supp/: go.py  main.c
r5/basics/: .gitignore  dejavu.c  (+8 more)
r9/learn_cmake/: CMakeLists.txt  build.py  main.cpp  reload.py  run.py
(+149 files in other folders)
